projects/woodpecker/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: woodpecker-ingress
  namespace: woodpecker
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: woodpecker.macmini.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: woodpecker-server
                port:
                  number: 80
